<resources>
    <string name="app_name">Hack Empty Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title">Some Title</string>
    <string name="app_description">app_description</string>
    <string name="phone_number_text_input_hint">phone number</string>
    <string name="password">password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">sign up</string>
    <string name="please_wait">Подождите пожалуйста</string>
</resources>
